website/websites/u32/code/spectralnorm.7.python3.log

Tue, 05 Apr 2011 23:42:42 GMT

MAKE:
mv spectralnorm.python3-7.python3 spectralnorm.python3-7.py
0.01s to complete and log all make actions

COMMAND LINE:
/usr/local/src/Python-3.2/bin/python3.2 spectralnorm.python3-7.py 500

PROGRAM FAILED 


PROGRAM OUTPUT:

  File "spectralnorm.python3-7.py", line 31
    def part_A_times_u((split,u)):
                       ^
SyntaxError: invalid syntax
